--- a/index.html
+++ b/index.html
@@ -1,8 +1,63 @@
 <html>
+
 <head>
   <title>AI101 - A Guide to Artificial Intelligence</title>
+  <!-- <link rel="stylesheet" href="/uni.css"> -->
+  <link rel="stylesheet" href="/uni.css">
+  <!-- Compiled and minified CSS -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Compiled and minified JavaScript -->
 </head>
+
 <body>
-  <p>Init</p>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $(".button-collapse").sideNav();
+    });
+  </script>
+
+  <div class="navbar-fixed">
+    <nav class="">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">&nbsp;AI 101</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/About">About Us</a></li>
+          <li><a href="/Uses">Uses</a></li>
+          <li><a href="/Tech">Technology</a></li>
+          <li><a href="/Conc">Concerns</a></li>
+          <!-- Dropdown Trigger -->
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <div class="Hero">
+    <span>AI 101 - A Guide to Artificial Intelligence</span>
+  </div>
+  <div class="Spacer">
+    "I visualize a time when we will be to robots what dogs are to humans, and I’m rooting for the machines."<br>-Claude Shannon
+  </div>
+  <div class="Text1">
+    <div class="row">
+      <div class="col s6 offset-s6">
+        <div class="card">
+          <div class="card-content black-text">
+            <span class="card-title">What is Artificial Intelligence?</span>
+            <p>Artificial Intelligence (AI) is the simulation of human intelligence processes by machines, especially computer systems. These processes include learning, reasoning, and self-correction. Particular applications of AI include expert systems,
+              speech recognition, and machine vision.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <footer class="page-footer">
+    Designed and Built for <a class="AK" href="http://aktsa.org">AK <span>TSA</span></a> by Agnim Agarwal
+  </footer>
 </body>
+
 </html>
