--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>AI101 - A Guide to Artificial Intelligence</title>
   <!-- <link rel="stylesheet" href="/uni.css"> -->
-  <link rel="stylesheet" href="/uni.css">
+  <link rel="stylesheet" href="uni.css">
   <!-- Compiled and minified CSS -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
@@ -25,10 +25,10 @@
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">&nbsp;AI 101</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="/About">About Us</a></li>
-          <li><a href="/Uses">Uses</a></li>
-          <li><a href="/Tech">Technology</a></li>
-          <li><a href="/Conc">Concerns</a></li>
+          <li><a href="About/">About Us</a></li>
+          <li><a href="Uses/">Uses</a></li>
+          <li><a href="Tech/">Technology</a></li>
+          <li><a href="Conc/">Concerns</a></li>
           <!-- Dropdown Trigger -->
         </ul>
       </div>
