--- a/uses.html
+++ b/uses.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Uses - AI101</title>
-  <link rel="stylesheet" href="../uni.css">
+  <link rel="stylesheet" href="uni.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
