EDIT: Active Nav Headings w/ JQuery

--- a/abot.html
+++ b/abot.html
@@ -2,9 +2,9 @@
 
 <head>
   <title>About Us - AI101</title>
-  <link rel="stylesheet" href="uni.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="uni.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="About Us - AI101">
   <meta name="author" content="Agnim Agarwal">
@@ -26,6 +26,7 @@
       $(".button-collapse").sideNav();
       // $("#navBox").load("nav.html");
       $("#footBox").load("footer.html");
+      $(".abot").addClass("active");
     });
   </script>
 </body>
