--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       // $("#navBox").load("nav.html");
       $("#footBox").load("footer.html");
       $(".button-collapse").sideNav();
+      $(".home").addClass("active");
     });
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.4.0/rellax.js"></script>
