--- a/uses.html
+++ b/uses.html
@@ -2,9 +2,9 @@
 
 <head>
   <title>Uses - AI101</title>
-  <link rel="stylesheet" href="uni.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="uni.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Uses - AI101">
   <meta name="author" content="Agnim Agarwal">
@@ -52,6 +52,7 @@
       $(".button-collapse").sideNav();
       // $("#navBox").load("nav.html");
       $("#footBox").load("footer.html");
+      $(".uses").addClass("active");
     });
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
