--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <footer class="page-footer">
-  Designed and Built for <a class="AK" href="http://aktsa.org">AK <span>TSA</span></a> by Agnim Agarwal
+  Designed and Built by Agnim Agarwal<br><a class="AK" href="http://aktsa.org">AK <span>TSA</span></a> | <a style="font-family: inherit; text-decoration: underline;" href="http://aktsa.org/cte.html">AK CTE</a> 
 </footer>
