--- a/uses.html
+++ b/uses.html
@@ -1,64 +1,93 @@
 <html>
 
 <head>
-  <title>Uses - AI101</title>
+  <title>Uses of the AquaBot</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="uni.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Uses - AI101">
+  <meta name="description" content="Uses of the AquaBot">
   <meta name="author" content="Agnim Agarwal">
   <meta charset="UTF-8">
+  <style>
+    .TextBox {
+      margin-top: 20vh;
+    }
+  </style>
 </head>
 
 <body>
-<!-- <div id="navBox"></div> -->
-<script src="nav.js"></script>
+  <!-- <div id="navBox"></div> -->
+  <script src="nav.js"></script>
   <div id="slides-container">
-    <div id="slides"
-    data-0="transform:translate(0%,0%);"
-    data-150p="transform:translate(-50%,0%);"
-    data-200p=""
-    data-300p="transform:translate(-50%,-50%);"
-    data-350p=""
-    data-450p="transform:translate(0%,-50%);"
-    data-500p=""
-    data-550p="transform:translate(0%,-57%);">
+    <div id="slides" data-0="transform:translate(0%,0%);" data-150p="transform:translate(-50%,0%);" data-200p="" data-300p="transform:translate(-50%,-50%);" data-350p="" data-450p="transform:translate(0%,-50%);">
       <!--  slide 1  -->
       <div id="slide-1" class="Hero UsesHero slide">
-        <div class="Text Title">
-          <h1>Uses</h1>
+        <div class="Text Title" style="margin-top: 10vh;">
+          <h1>Uses of the AquaBot</h1>
         </div>
       </div>
 
       <!-- slide 2 -->
-      <div id="slide-2" class="slide">
-        <div id="footBox"></div>
+      <div id="slide-2" class="slide" style="background-image: url('https://aquatechpoolmanagement.com/sites/default/files/styles/slideshow_slide__1000x500_/public/photo%202_0.JPG?itok=fJm7ViAs');">
+        <div class="TextBox w6 off6">
+          <div class="Text">
+            <h2>Safety</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet sed euismod nisi porta. Sodales neque sodales ut etiam sit amet nisl purus in. Ultrices in iaculis nunc sed augue
+              lacus. Urna duis convallis convallis tellus. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Eu lobortis elementum nibh tellus molestie nunc non blandit. Risus in hendrerit gravida rutrum quisque non. Ipsum dolor sit amet
+              consectetur adipiscing. Urna nec tincidunt praesent semper. Sit amet nisl suscipit adipiscing.
+          </p>
+          </div>
+        </div>
       </div>
-      <div id="slide-3" class="slide"></div>
-      <div id="slide-4" class="slide"></div>
+      <div id="slide-3" class="slide" style="background-image: url('https://cdn.surfer.com/uploads/2017/11/WilliamAliotti_Tahiti_SURFER58.7_Thouard_Featured.jpg');">
+        <div class="TextBox w6 off6">
+          <div class="Text">
+            <h2>Recreational Activities</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet sed euismod nisi porta. Sodales neque sodales ut etiam sit amet nisl purus in. Ultrices in iaculis nunc sed augue
+              lacus. Urna duis convallis convallis tellus. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Eu lobortis elementum nibh tellus molestie nunc non blandit. Risus in hendrerit gravida rutrum quisque non. Ipsum dolor sit amet
+              consectetur adipiscing. Urna nec tincidunt praesent semper. Sit amet nisl suscipit adipiscing.
+          </p>
+          </div>
+        </div>
+      </div>
+      <div id="slide-4" class="slide" style="background-image: url('https://thetyee.ca/News/2017/06/14/OceanReef.jpg')">
+        <div class="TextBox w6 off6">
+          <div class="Text">
+            <h2>Deep-Sea Research</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet sed euismod nisi porta. Sodales neque sodales ut etiam sit amet nisl purus in. Ultrices in iaculis nunc sed augue
+              lacus. Urna duis convallis convallis tellus. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Eu lobortis elementum nibh tellus molestie nunc non blandit. Risus in hendrerit gravida rutrum quisque non. Ipsum dolor sit amet
+              consectetur adipiscing. Urna nec tincidunt praesent semper. Sit amet nisl suscipit adipiscing.
+          </p>
+          </div>
+        </div>
+      </div>
     </div>
 
-  <div id="helper">
-    <div class="marker red"></div>
-    <div class="marker green"></div>
-    <div class="marker blue"></div>
-    <div class="marker yellow"></div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script>
-    $(document).ready(function() {
-      $(".button-collapse").sideNav();
-      // $("#navBox").load("nav.html");
-      $("#footBox").load("footer.html");
-      $(".uses").addClass("active");
-    });
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
-  <script type="text/javascript">
-    var s = skrollr.init();
-  </script>
+    <div id="helper">
+      <div class="marker red"></div>
+      <div class="marker green"></div>
+      <div class="marker blue"></div>
+      <div class="marker yellow"></div>
+    </div>
+    <div id="footBox"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script>
+      $(document).ready(function() {
+        // $("#navBox").load("nav.html");
+        $("#footBox").load("footer.html");
+        $(".button-collapse").sideNav();
+        $(".uses").addClass("active");
+        $(".dropdown-button").dropdown({
+          hover: true
+        });
+      });
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
+    <script type="text/javascript">
+      var s = skrollr.init();
+    </script>
 </body>
 
 </html>
