--- a/bene.html
+++ b/bene.html
@@ -3,7 +3,7 @@
   <title>Benefits of the AquaBot</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  <link rel="stylesheet" href="uni.css">
+  <link rel="stylesheet" href="css/uni.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Benefits of the AquaBot">
   <meta name="author" content="Agnim Agarwal">
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!-- <div id="navBox"></div> -->
-  <script src="nav.js"></script>
+  <script src="js/nav.js"></script>
   <div class="Hero BeneHero">
     <div class="Text Title">
       <h1>Benefits of the AquaBot</h1>
