--- a/cont.html
+++ b/cont.html
@@ -4,7 +4,7 @@
   <title>Contact Us - Innovate Robotics</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  <link rel="stylesheet" href="uni.css">
+  <link rel="stylesheet" href="css/uni.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Contact Us - Innovate Robotics">
   <meta name="author" content="Agnim Agarwal">
@@ -13,7 +13,7 @@
 
 <body>
   <!-- <div id="navBox"></div> -->
-  <script src="nav.js"></script>
+  <script src="js/nav.js"></script>
   <div class="Hero TechHero" style="background-image: url('https://www.takeda.com/siteassets/system/who-we-are/contact-us/contact1600x900.jpg')">
     <div class="Text Title">
       <h1>Contact Us</h1>
