--- a/tech.html
+++ b/tech.html
@@ -3,7 +3,7 @@
   <title>Technology - AI101</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  <link rel="stylesheet" href="uni.css">
+  <link rel="stylesheet" href="css/uni.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Technology - AI101">
   <meta name="author" content="Agnim Agarwal">
@@ -12,7 +12,7 @@
 
 <body>
   <!-- <div id="navBox"></div> -->
-  <script src="nav.js"></script>
+  <script src="js/nav.js"></script>
   <div class="Hero TechHero">
     <div class="Text Title">
       <h1>Technology</h1>
