--- a/uses.html
+++ b/uses.html
@@ -4,7 +4,7 @@
   <title>Uses of the AquaBot</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  <link rel="stylesheet" href="uni.css">
+  <link rel="stylesheet" href="css/uni.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Uses of the AquaBot">
   <meta name="author" content="Agnim Agarwal">
@@ -18,7 +18,7 @@
 
 <body>
   <!-- <div id="navBox"></div> -->
-  <script src="nav.js"></script>
+  <script src="js/nav.js"></script>
   <div id="slides-container">
     <div id="slides" data-0="transform:translate(0%,0%);" data-150p="transform:translate(-50%,0%);" data-200p="" data-300p="transform:translate(-50%,-50%);" data-350p="" data-450p="transform:translate(0%,-50%);">
       <!--  slide 1  -->
