--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
   <title>The AquaBot - A Revolutionary Approach to Underwater Activity</title>
 
@@ -68,7 +67,7 @@
           <div class="card-stacked">
             <div class="card-content">
               <span class="card-title">Benefits of the AquaBot</span>
-              <p></p>
+              <p>With such a wide target group, the AquaBot has numerous benefits applicable to anyone. From aiding marine life researchers to lifeguarding for public pools and beaches, the AquaBot can enhance even everyday activities. For more information, see the benefits page <a href="bene.html">here</a>.</p>
             </div>
           </div>
         </div>
@@ -80,11 +79,26 @@
           <div class="card-stacked">
             <div class="card-content">
               <span class="card-title">Pricing Details</span>
-              <p></p>
+              <p>Interested in purchasing the AquaBot? See the cost page <a href="cost.html">here</a> for more information. If you would like a personalized plan suitable for your business or consumer needs, fill out our <a href="cont.html">contact form</a> and we will get back to you within 24 hours </p>
             </div>
           </div>
           <div class="card-image">
             <img src="https://ksr-ugc.imgix.net/assets/016/409/373/5400a798521bcf1bb18f1b5af0853aae_original.jpg?crop=faces&w=1552&h=873&fit=crop&v=1493216916&auto=format&q=92&s=cb442d870b7b047357e92fa7a7119683">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m12">
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="http://www.capableteamproductions.com/images/abt-img.png">
+            </div>
+          <div class="card-stacked">
+              <div class="card-content">
+                <span class="card-title">Who are We?</span>
+                <p>We are a group of software developers looking to make a difference in the world. Founded in 2010, our company, Aquabot Technologies, has grown to serve 1 million customers worldwide through our website alone. We would love to receive assistance regarding advertising and manufacturing costs. If you would like to reach us, please contact us <a href="cont.html">here</a>. To learn more about our company, see our about us page <a href="us.html">here</a>.</p>
+              </div>
           </div>
         </div>
       </div>
