--- a/cont.html
+++ b/cont.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Contact Us - Innovate Robotics</title>
+  <title>Contact Us</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="css/uni.css">
@@ -14,7 +14,7 @@
 <body>
   <!-- <div id="navBox"></div> -->
   <script src="js/nav.js"></script>
-  <div class="Hero TechHero" style="background-image: url('https://www.takeda.com/siteassets/system/who-we-are/contact-us/contact1600x900.jpg')">
+  <div class="Hero ContHero" style="background-image: url('https://www.takeda.com/siteassets/system/who-we-are/contact-us/contact1600x900.jpg')">
     <div class="Text Title">
       <h1>Contact Us</h1>
     </div>
@@ -67,7 +67,7 @@
 
 
   <!-- ============================================================================== -->
-  <div id="footBox"></div>
+  <!-- <div id="footBox"></div> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script>
