--- a/us.html
+++ b/us.html
@@ -35,7 +35,7 @@
             <div class="card-content">
               <span class="card-title">Who are We</span>
               <p>We are a group of software developers looking to make a difference in the world. When we found the underlying issue of the lack of research efforts being made in our oceans, we knew something had to be done. Our efforts to incorporate Artificial
-                Intelligence with marine life research formed the AquaBot, now the most advanced product in the field of underwater activity.</p>
+                Intelligence with marine life research formed the Aquabot, now the most advanced product in the field of underwater activity.</p>
             </div>
           </div>
         </div>
@@ -61,7 +61,7 @@
   <!-- ============================================================================== -->
 
 
-  <div id="footBox"></div>
+  <!-- <div id="footBox"></div> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script>
