--- a/uses.html
+++ b/uses.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-  <title>Uses of the AquaBot</title>
+  <title>Uses of the Aquabot</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="css/uni.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Uses of the AquaBot">
+  <meta name="description" content="Uses of the Aquabot">
   <meta name="author" content="Agnim Agarwal">
   <meta charset="UTF-8">
   <style>
@@ -24,7 +24,7 @@
       <!--  slide 1  -->
       <div id="slide-1" class="Hero UsesHero slide">
         <div class="Text Title" style="margin-top: 10vh;">
-          <h1>Uses of the AquaBot</h1>
+          <h1>Uses of the Aquabot</h1>
         </div>
       </div>
 
@@ -70,7 +70,7 @@
       <div class="marker blue"></div>
       <div class="marker yellow"></div>
     </div>
-    <div id="footBox"></div>
+    <!-- <div id="footBox"></div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script>
