--- a/robottech.html
+++ b/robottech.html
@@ -20,18 +20,23 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="css/uni.css">
+  <style>
+    .back:hover {
+      
+    }
+    
+  </style>
 
 
 </head>
 
 <body>
-  <!-- <script src="js/nav.js"></script> -->
+   <script src="js/nav.js"></script> 
   <div class="Content" style="padding:0   !important;">
-    <a href="abot.html" id="homebutton" class="uk-button uk-button-primary uk-button-large"><i class="material-icons">arrow_back</i></a>
-
+    <a href="abot.html" id="homebutton" class="uk-button uk-button-primary uk-button-large back">Back to About Page</a>
     <center>
       <div class="uk-inline uk-dark">
-        <img class="uk-align-right uk-margin-remove-adjacent" src="images/robot.png" height="950" width="950" alt="Aquabot">
+        <img class="uk-align-right uk-margin-remove-adjacent" src="images/robot.PNG" height="950" width="950" alt="Aquabot">
         <a class="uk-position-absolute uk-transform-center" id="marker1" style="left: 41%; top: 35%" uk-marker title="Arm used for underwater movement" uk-tooltip="pos: bottom"></a>
         <a class="uk-position-absolute uk-transform-center" id="marker1" style="left: 53%; top: 24%" uk-marker title="Sensors used to detect underwater life" uk-tooltip="pos: bottom"></a>
         <a class="uk-position-absolute uk-transform-center" id="marker1" style="left: 60%; top: 89%" uk-marker title="The leg is used for extra power and helps the robot travel in strong currents." uk-tooltip="pos: bottom"></a>
@@ -41,6 +46,20 @@
 
     </center>
   </div>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      // $("#navBox").load("nav.html");
+      $("#footBox").load("footer.html");
+      $(".button-collapse").sideNav();
+      $(".abot").addClass("active");
+      $(".dropdown-button").dropdown({
+        hover: true
+      });
+    });
+  </script>
+  
 </body>
 
 </html>
