--- a/bene.html
+++ b/bene.html
@@ -30,7 +30,7 @@
 
 
 <!--  ============================ CONTENT STARTS HERE ==============================-->
-<div class="Content" style="background: #2ECC71;">
+<div class="Content" style="">
 <div class="uk-child-width-1-2@m wow fadeInUp" uk-grid >
     <div>
         <div class="uk-card uk-card-hover uk-card-default" style="" id="contentbox">
