--- a/uses.html
+++ b/uses.html
@@ -13,6 +13,12 @@
     .TextBox {
       margin-top: 20vh;
     }
+    @media only screen and (max-width: 760px) {
+      .TextBox {
+        margin: -10vh 10vw !important;
+        width: 80vw !important;
+      }
+    }
   </style>
 </head>
 
@@ -33,10 +39,7 @@
         <div class="TextBox w6 off6">
           <div class="Text">
             <h2>Safety</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet sed euismod nisi porta. Sodales neque sodales ut etiam sit amet nisl purus in. Ultrices in iaculis nunc sed augue
-              lacus. Urna duis convallis convallis tellus. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Eu lobortis elementum nibh tellus molestie nunc non blandit. Risus in hendrerit gravida rutrum quisque non. Ipsum dolor sit amet
-              consectetur adipiscing. Urna nec tincidunt praesent semper. Sit amet nisl suscipit adipiscing.
-          </p>
+            <p>Why risk a life when lifeguarding at a pool or beach? The Aquabot has sophisticated analysis programs to constantly survey a large population. In the event of an emergency, the Aquabot has access to expansive medical databases that can be applied to any situation.</p>
           </div>
         </div>
       </div>
@@ -44,10 +47,7 @@
         <div class="TextBox w6 off6">
           <div class="Text">
             <h2>Recreational Activities</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet sed euismod nisi porta. Sodales neque sodales ut etiam sit amet nisl purus in. Ultrices in iaculis nunc sed augue
-              lacus. Urna duis convallis convallis tellus. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Eu lobortis elementum nibh tellus molestie nunc non blandit. Risus in hendrerit gravida rutrum quisque non. Ipsum dolor sit amet
-              consectetur adipiscing. Urna nec tincidunt praesent semper. Sit amet nisl suscipit adipiscing.
-          </p>
+            <p>The Aquabot can benefit any water sport enthusiasts, including swimmers, divers, and surfers, with its training programs. Supplemented by Machine Learning, the Aquabot is constantly improving at every sport, allowing users to develop to their full potential in any underwater sport.</p>
           </div>
         </div>
       </div>
@@ -55,10 +55,8 @@
         <div class="TextBox w6 off6">
           <div class="Text">
             <h2>Deep-Sea Research</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Imperdiet sed euismod nisi porta. Sodales neque sodales ut etiam sit amet nisl purus in. Ultrices in iaculis nunc sed augue
-              lacus. Urna duis convallis convallis tellus. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Eu lobortis elementum nibh tellus molestie nunc non blandit. Risus in hendrerit gravida rutrum quisque non. Ipsum dolor sit amet
-              consectetur adipiscing. Urna nec tincidunt praesent semper. Sit amet nisl suscipit adipiscing.
-          </p>
+            <p>There is an abundance of undiscovered life waiting in the depths of the ocean, but many researchers lack the advanced technology needed to explore at those depths. With Aquabot, researchers can take advantage of its built in Oxygen converter
+              as well as its expansive network powered by Artifical Intelligence to aid their deep-sea endeavors.</p>
           </div>
         </div>
       </div>
