--- a/conc.html
+++ b/conc.html
@@ -23,7 +23,7 @@
 
 <!--  ============================ CONTENT STARTS HERE ==============================-->
 
-<div class="Content" style="background: #2ECC71 !important;">
+<div class="Content" style="">
   <div class="row">
     <div class="col s12 m12">
       <div class="card horizontal">
