--- a/cost.html
+++ b/cost.html
@@ -18,7 +18,7 @@
     }
     a:hover {
       text-decoration: none !important;
-      color: black !important;
+      /* color: black !important; */
     }
   </style>
 </head>
